--- a/COG_publications/2019_neurips_vigil/vigil_2019_main.tex
+++ b/COG_publications/2019_neurips_vigil/vigil_2019_main.tex
@@ -1,5 +1,5 @@
 \documentclass{article}
-\usepackage{neurips_2019}
+\usepackage[final]{neurips_2019}
 
 \usepackage[utf8]{inputenc} % allow utf-8 input
 \usepackage[T1]{fontenc}    % use 8-bit T1 fonts
@@ -81,10 +81,10 @@
 \newcommand{\cH}{\mathcal{H}}
 \newcommand{\cI}{\mathcal{I}}
 
-\newcommand{\vect}[1]{\mathbf{#1}}
-\newcommand{\vx}{\vect{x}}
-\newcommand{\vy}{\vect{y}}
-\newcommand{\vone}{\vect{1}}
+\renewcommand{\vec}[1]{\mathbf{#1}}
+\newcommand{\vx}{\vec{x}}
+\newcommand{\vy}{\vec{y}}
+\newcommand{\vone}{\vec{1}}
 \newcommand{\proj}{\mathrm{proj}}
 
 \newcommand{\imatch}{g^{\mathrm{v}}}
@@ -98,13 +98,15 @@
 \newcommand{\tnow}{\tau^{\mathrm{now}}}
 \newcommand{\tnone}{\tau^{\mathrm{none}}}
 
-\newcommand{\rhead}{rh}
-\newcommand{\whead}{wh}
+\newcommand{\rhead}{\vec{rh}}
+\newcommand{\whead}{\vec{wh}}
 
 
 \title{Visually Grounded Video Reasoning in Selective Attention Memory}
 
-\author{T.S. Jayram, Vincent Albouy, Tomasz Kornuta, Emre Sevgen, Ahmet Ozcan}
+\author{T.S. Jayram, Vincent Albouy, Tomasz Kornuta, Emre Sevgen, Ahmet Ozcan\\
+IBM Research AI\\
+Almaden Research Center, San Jose, CA 95120, USA}
 
 \begin{document}
 \maketitle
@@ -124,10 +126,10 @@ the art baseline for hard tasks and in terms of generalization over video length
 \input{intro}
 \input{model}
 \input{experiments}
-\newpage
 \bibliographystyle{abbrv}
 \bibliography{../cog_bibliography}
 \newpage
+\pagenumbering{arabic}
 \input{appendix_model}
 	
 \end{document}
