--- a/COG_publications/2019_neurips_vigil/model.tex
+++ b/COG_publications/2019_neurips_vigil/model.tex
@@ -18,12 +18,12 @@
 %The model is also composed of an Image Encoder and a Question Encoder both responsible to pre-process the visual and textual inputs. The output unit is a classifier.
 %All those modules are described below.
 
-\begin{wrapfigure}{r}{0.80\textwidth}
+\begin{figure}[!t]
 	\centering
-	\includegraphics[width=0.78\textwidth]{../img/architecture/samnet_architecture4}
+	\includegraphics[width=0.9\textwidth]{../img/architecture/samnet_architecture4}
 	\caption{General architecture of SAMNet}
 	\label{fig:samnet}
-\end{wrapfigure}
+\end{figure}
 
 %\begin{figure}[hbtp]
 %	\centering
@@ -43,12 +43,12 @@ in order to perform multi-step spatio-temporal reasoning over text and video.
 %testing to fit the characteristics of data.
 
 
-\begin{wrapfigure}{r}{0.8\textwidth}
+\begin{figure}[!b]
 	\centering
-	\includegraphics[width=0.78\textwidth]{../img/architecture/samcell_reasoning}
+	\includegraphics[width=0.9\textwidth]{../img/architecture/samcell_reasoning}
 	\caption{Unfolded reasoning steps with operations performed by the SAMCell}
 	\label{fig:samcell}
-\end{wrapfigure}
+\end{figure}
 
 %\begin{figure}[hbtp]
 %	\centering
@@ -62,25 +62,25 @@ Unrolling a new series of $T$ cells for every frame enables $T$ steps of composi
 reasoning, similar to~\cite{hudson2018compositional}.
 Information flows between frames through the external memory. 
 During the $t$-th reasoning step, for $t=1,2, \dots, T$, SAM Cell maintains the following information as part of its recurrent state:
-(a) $c_t \in \Reals^d$, the control state used to drive the reasoning over objects in the frame and memory; and
-(b) $so_t  \in \Reals^d$, the summary visual object representing the relevant object for step $t$.
-Let $M_t \in  \Reals^{N \times d}$ denote the external memory with $N$ slots at the end of step $t$.
+(a) $\vec{c}_t \in \Reals^d$, the control state used to drive the reasoning over objects in the frame and memory; and
+(b) $\vec{so}_t  \in \Reals^d$, the summary visual object representing the relevant object for step $t$.
+Let $\vec{M}_t \in  \Reals^{N \times d}$ denote the external memory with $N$ slots at the end of step $t$.
 Let $\whead_t \in  \Reals^N$ denote an attention vector over the memory locations;
 in a trained model, $\whead_t$ points to the location of first empty slot in memory for adding new objects.   
 
 \noindent{\textbf{Question-driven Controller.}}
 This module drives attention over the question to produce $k$ control states, one per reasoning operation. 
-The control state $c_t$ at step $t$ is then fed to a \emph{temporal classifier}, 
+The control state $\vec{c}_t$ at step $t$ is then fed to a \emph{temporal classifier}, 
 a two-layer feedforward network with ELU activation used in the hidden layer of $d$ units.
-The output $\tau_t$ of the classifier is intended to represent the different temporal contexts (or lack thereof) associated with the word in focus for that step of reasoning.	
+The output $\vec{\tau}_t$ of the classifier is intended to represent the different temporal contexts (or lack thereof) associated with the word in focus for that step of reasoning.	
 For the COG dataset we pick 4 classes to capture the terms labeled ``last'', ``latest'', ``now'', and ``none''.
 
-The visual retrieval unit uses the information generated above to extract a relevant object $vo_t$ from the frame.
-A similar operation on memory yields the object $mo_t$. The memory operation is based on an attention mechanism,
+The visual retrieval unit uses the information generated above to extract a relevant object $\vec{vo}_t$ from the frame.
+A similar operation on memory yields the object $\vec{mo}_t$. The memory operation is based on an attention mechanism,
 and resembles content-based addressing on memory. Therefore, we obtain an attention vector over memory addresses
 that we interpret to be the \emph{read head}, denoted by $\rhead_t$.
 Note that the returned objects may be invalid, 
-e.g., if the current reasoning step focuses on the phrase ``last red square'', $vo_t$ is invalid 
+e.g., if the current reasoning step focuses on the phrase ``last red square'', $\vec{vo}_t$ is invalid 
 even if the current frame contains a red square. 
 
 \noindent{\textbf{Reasoning Unit.}}
@@ -88,13 +88,13 @@ even if the current frame contains a red square.
 This module is the backbone of SAMNet that determines what gating operations need to be performed on the external memory, as well as
 determining the location of the correct object for reasoning.
 To determine whether we have a valid object from the frame (and similarly for memory), we execute the following reasoning procedure.
-First, we take the visual attention vector $va_t$ of dimension $L$, where $L$ denotes the number of feature vectors for the frame,
+First, we take the visual attention vector $\vec{va}_t$ of dimension $L$, where $L$ denotes the number of feature vectors for the frame,
 and compute a simple aggregate\footnote{%
 	This is closely related to Tsallis entropy of order 2 and to R\'{e}nyi entropy.}: %
-$vs_t = \sum_{i=1}^L [va_t(i)]^2$. It can be shown mathematically that the more localized the attention
+$vs_t = \sum_{i=1}^L [\vec{va}_t(i)]^2$. It can be shown that the more localized the attention
 vector is, the higher is the aggregate value.
-We perform a similar computation on the read head $rh_t$ over memory locations.
-We feed these two values along with the temporal class weights $\tau_t$ to a 3-layer feedforward classifier with hidden ELU units to extract 4 gating values
+We perform a similar computation on the read head $\rhead_t$ over memory locations.
+We feed these two values along with the temporal class weights $\vec{\tau}_t$ to a 3-layer feedforward classifier with hidden ELU units to extract 4 gating values
 in $[0,1]$ modulated for the current reasoning step:
 (a) $\imatch_t$, which determines whether there is a valid visual object;
 (b) $\mmatch_t$, which determines whether there is a valid memory object. 
@@ -104,15 +104,15 @@ We stress that the network has to learn via training how to correctly implement 
 
 \noindent{\textbf{Memory Update Unit.}}
 Unit first determines the memory location where an object could be added:
-\[ w_t = \doreplace \cdot \rhead_t + \doadd \cdot \whead_{t-1} \]
-Above, $w_t$ denotes the pseudo-attention vector that represents the ``location'' where the memory update should happen.
-The sum of components of $w$ is at most equal to 1; and $w_t$ can even equal 0 whenever neither condition
+\[ \vec{w}_t = \doreplace \cdot \rhead_t + \doadd \cdot \whead_{t-1} \]
+Above, $\vec{w}_t$ denotes the pseudo-attention vector that represents the ``location'' where the memory update should happen.
+The sum of components of $\vec{w}_t$ is at most equal to 1; and $\vec{w}_t$ can even equal 0, e.g., whenever neither condition
 of adding a new object nor replacing an existing object holds true.
 We then update the memory accordingly as:
-\[ M_t = M_{t-1} \odot (J - w_t \otimes \mathbf{1}) + w_t \otimes vo_t,\]
-where $vo_t$ denotes the object returned by the visual retrieval unit. 
-Here $J$ denotes the all ones matrix, $\odot$ denotes the Hadamard product and $\otimes$ denotes the Kronecker product. 
-Note that the memory is unchanged in the case where $w_t = 0$, i.e., $M_t = M_{t-1}$.
+\[ \vec{M}_t = \vec{M}_{t-1} \odot (\vec{J} - \vec{w}_t  \otimes \mathbf{1}) + \vec{w}_t  \otimes \vec{vo}_t,\]
+where $\vec{vo}_t$ denotes the object returned by the visual retrieval unit. 
+Here $\vec{J}$ denotes the all ones matrix, $\odot$ denotes the Hadamard product and $\otimes$ denotes the Kronecker product. 
+Note that the memory is unchanged in the case where $\vec{w}_t = 0$, i.e., $\vec{M}_t = \vec{M}_{t-1}$.
 We finally update the write head so that it points to the succeeding address if an object was added to memory or otherwise stay the same.
 Let $\whead'_{t-1}$ denote the circular shift to the right of $\whead_{t-1}$ which corresponds to the soft version of the head update.
 Then:
@@ -121,10 +121,8 @@ Then:
 \noindent{\textbf{Summary Update Unit.}}
 %\paragraph{Summary Update Unit.}
 This unit updates the (recurrent) summary object to equal the outcome of the $t$-th reasoning step.
-We first determine whether the relevant object $ro_t$ should be obtained from memory or the frame according to:
-\[ ro_t = \imatch_t \cdot vo_t + \mmatch_t \cdot mo_t \]
-Note that $ro_t$ is allowed to be a null object (i.e. 0 vector) in case neither of the gates evaluate to true.
-Finally, $so_t$ is the output of a simple linear layer whose inputs are $ro_t$ and the previous summary object $so_{t-1}$.
-This serves to retain additional information that was in $so_{t-1}$, e.g., if it held the partial result of a complex query with Boolean connectives.
-
-For details of the modules not covered here, please see the appendix.
+We first determine whether the relevant object $\vec{ro}_t$ should be obtained from memory or the frame according to:
+\[ \vec{ro}_t = \imatch_t \cdot \vec{vo}_t + \mmatch_t \cdot \vec{mo}_t \]
+Note that $\vec{ro}_t$ is allowed to be a null object (i.e. 0 vector) in case neither of the gates evaluate to true.
+Finally, $\vec{so}_t$ is the output of a simple linear layer whose inputs are $\vec{ro}_t$ and the previous summary object $\vec{so}_{t-1}$.
+This serves to retain additional information that was in $\vec{so}_{t-1}$, e.g., if it held the partial result of a complex query with Boolean connectives.
